<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <Button
            android:id="@+id/btnServicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnServicios"
            android:onClick="selectedButton"/>

        <Button
            android:id="@+id/btnPortafolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPortafolio"
            android:onClick="selectedButton"/>

        <Button
            android:id="@+id/btnAcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAcercaDe"
            android:onClick="selectedButton"/>

        <Button
            android:id="@+id/btnContactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnContactos"
            android:onClick="selectedButton"/>

        <Button
            android:id="@+id/btnRedesSociales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRedesSociales"
            android:onClick="selectedButton"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>